hphp/test/zend/good/ext/session/tests/031.php
<?php
error_reporting(E_ALL);

session_start();
session_regenerate_id(TRUE);

print "I live\n";
?>