hphp/test/zend/bad/zend/halt01.php
<?php

print "yo!\n";

__HALT_COMPILER();

none of this should be displayed!